tests/baselines/reference/mergedInterfacesWithInheritedPrivates(strict=true).errors.txt
mergedInterfacesWithInheritedPrivates.ts(2,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
mergedInterfacesWithInheritedPrivates.ts(13,7): error TS2420: Class 'D' incorrectly implements interface 'A'.
  Types have separate declarations of a private property 'x'.
mergedInterfacesWithInheritedPrivates.ts(14,13): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
mergedInterfacesWithInheritedPrivates.ts(15,5): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
mergedInterfacesWithInheritedPrivates.ts(16,5): error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
mergedInterfacesWithInheritedPrivates.ts(19,7): error TS2420: Class 'E' incorrectly implements interface 'A'.
  Property 'x' is private in type 'A' but not in type 'E'.
mergedInterfacesWithInheritedPrivates.ts(20,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
mergedInterfacesWithInheritedPrivates.ts(21,5): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
mergedInterfacesWithInheritedPrivates.ts(22,5): error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
mergedInterfacesWithInheritedPrivates.ts(26,9): error TS2454: Variable 'a' is used before being assigned.
mergedInterfacesWithInheritedPrivates.ts(26,11): error TS2341: Property 'x' is private and only accessible within class 'C'.


==== mergedInterfacesWithInheritedPrivates.ts (11 errors) ====
    class C {
        private x: number;
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    }
    
    interface A extends C {
        y: string;
    }
    
    interface A {
        z: string;
    }
    
    class D implements A { // error
          ~
!!! error TS2420: Class 'D' incorrectly implements interface 'A'.
!!! error TS2420:   Types have separate declarations of a private property 'x'.
        private x: number;
                ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        y: string;
        ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
        z: string;
        ~
!!! error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
    }
    
    class E implements A { // error
          ~
!!! error TS2420: Class 'E' incorrectly implements interface 'A'.
!!! error TS2420:   Property 'x' is private in type 'A' but not in type 'E'.
        x: number;
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        y: string;
        ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
        z: string;
        ~
!!! error TS2564: Property 'z' has no initializer and is not definitely assigned in the constructor.
    }
    
    var a: A;
    var r = a.x; // error
            ~
!!! error TS2454: Variable 'a' is used before being assigned.
              ~
!!! error TS2341: Property 'x' is private and only accessible within class 'C'.